--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julia Belinatti</title>
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container">
+                <img src="/img/logo-extenso.svg" alt="Logo Julia Belinatti">
+                <ul>
+                    <li>Bio</li>
+                    <li>Public</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <div class="main-section">
+        <img src="/img/Background.png" alt="background">
+    </div>
+    <div class="bio-section">
+        <p>text</p>
+
+    </section>
 </body>
 </html>
