--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="/img/icon-title.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julia Belinatti</title>
@@ -14,8 +14,10 @@
     <header>
         <nav>
             <div class="container">
-                <img src="/img/logo-extenso.svg" alt="Logo Julia Belinatti">
-                <ul>
+                <a href="https://youtube.com/@julia_belinatte">
+                    <img src="/img/logo-extenso.svg" alt="Logo Julia Belinatti">
+                    <ul>
+                </a>
                     <li>Bio</li>
                     <li>Public</li>
                     <li>Contact</li>
