--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
     <div class="main-section">
         <img src="/img/Background.png" alt="background">
     </div>
-    <div class="bio-section">
-        <p>text</p>
-
+    <div class="content">
+        <img src="/img/shiva.svg.svg" alt="">
+        <ul class="text">
+            
+        </ul>
+    </div>
     </section>
 </body>
 </html>
