--- a/index.html
+++ b/index.html
@@ -26,15 +26,35 @@
         </nav>
     </header>
 
+    <section>
     <div class="main-section">
         <img src="/img/Background.png" alt="background">
     </div>
-    <div class="content">
-        <img src="/img/shiva.svg.svg" alt="">
-        <ul class="text">
-            
-        </ul>
-    </div>
+    </section>
+
+    <section class="main-numbers">
+        <div class="container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet cupiditate dicta voluptatum! Recusandae culpa eos ab cupiditate quo? Explicabo impedit perferendis est, beatae eaque architecto non error quasi. Et, nostrum.</p>
+            <div class="box">
+                <div class="content">
+                    <img src="/img/coffe.png" class="ilustra">
+                    <ul class="text">
+                        <li>
+                            <strong>YouTube Subscribers</strong>
+                            <h3>+68k</h3>
+                        </li>
+                        <li>
+                            <strong>YouTube Views</strong>
+                            <h3>+4.2M</h3>
+                        </li>
+                        <li>
+                            <strong>Discord Comunity</strong>
+                            <h3>+2.6k</h3>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
