--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="container">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet cupiditate dicta voluptatum! Recusandae culpa eos ab cupiditate quo? Explicabo impedit perferendis est, beatae eaque architecto non error quasi. Et, nostrum.</p>
             <div class="box">
+                <img src="/img/coffe.png" class="ilustra">
                 <div class="content">
-                    <img src="/img/coffe.png" class="ilustra">
                     <ul class="text">
                         <li>
                             <strong>YouTube Subscribers</strong>
@@ -48,8 +48,8 @@
                             <h3>+4.2M</h3>
                         </li>
                         <li>
-                            <strong>Discord Comunity</strong>
-                            <h3>+2.6k</h3>
+                            <strong>Instagram</strong>
+                            <h3>+24k</h3>
                         </li>
                     </ul>
                 </div>
